--- a/App.xaml
+++ b/App.xaml
@@ -4,6 +4,30 @@
              xmlns:local="clr-namespace:LaboratoryApp"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="TextBlock" x:Key="CommonBlock">
+            <Setter Property="Margin" Value="5" />
+            <Setter Property="TextAlignment" Value="Right" />
+            <Setter Property="Width" Value="150" />
+        </Style>
+        <Style TargetType="ComboBox">
+            <Setter Property="Margin" Value="5" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+            <Setter Property="Width" Value="150" />
+        </Style>
+        <Style TargetType="PasswordBox">
+            <Setter Property="Margin" Value="5" />
+            <Setter Property="Width" Value="150" />
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="Margin" Value="5" />
+            <Setter Property="Width" Value="150" />
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="Background" Value="#FF6565FF" />
+            <Setter Property="Foreground" Value="White"></Setter>
+            <Setter Property="Margin" Value="5" />
+            <Setter Property="Width" Value="150" />
+            <Setter Property="HorizontalContentAlignment" Value="Center" />
+        </Style>
     </Application.Resources>
 </Application>
