--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,71 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LaboratoryApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="Окно авторизации"
+        Height="350"
+        Width="500"
+        MinHeight="250"
+        MinWidth="500"
+        WindowStartupLocation="CenterScreen"
+        Topmost="True">
+    <Grid RenderTransformOrigin="0.5,0.5">
+        <Grid.RenderTransform>
+            <ScaleTransform></ScaleTransform>
+        </Grid.RenderTransform>
+        <Grid.Triggers>
+            <EventTrigger RoutedEvent="Loaded">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <DoubleAnimation Duration="0:0:1"
+                                     From="0"
+                                     To="1"
+                                     Storyboard.TargetProperty="RenderTransform.ScaleX">
+                            <DoubleAnimation.EasingFunction>
+                                <CircleEase EasingMode="EaseOut"></CircleEase>
+                            </DoubleAnimation.EasingFunction>
+                        </DoubleAnimation>
+                        <DoubleAnimation Duration="0:0:1"
+                                     From="0"
+                                     To="1"
+                                     Storyboard.TargetProperty="RenderTransform.ScaleY">
+                            <DoubleAnimation.EasingFunction>
+                                <CircleEase EasingMode="EaseOut"></CircleEase>
+                            </DoubleAnimation.EasingFunction>
+                        </DoubleAnimation>
+                        <DoubleAnimation Duration="0:0:1"
+                                     From="0"
+                                     To="1"
+                                     Storyboard.TargetProperty="Opacity">
+                            <DoubleAnimation.EasingFunction>
+                                <CircleEase EasingMode="EaseOut"></CircleEase>
+                            </DoubleAnimation.EasingFunction>
+                        </DoubleAnimation>
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+        </Grid.Triggers>
+        <StackPanel HorizontalAlignment="Center"
+                    VerticalAlignment="Center">
+            <StackPanel Orientation="Horizontal" >
+                <TextBlock Text="Логин" Style="{StaticResource CommonBlock}"></TextBlock>
+                <ComboBox HorizontalAlignment="Left"></ComboBox>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" >
+                <TextBlock Text="Пароль" Style="{StaticResource CommonBlock}"></TextBlock>
+                <StackPanel x:Name="PasswordHider">
+                    <PasswordBox HorizontalAlignment="Left"></PasswordBox>
+                    <TextBox Visibility="Collapsed"></TextBox>
+                </StackPanel>
+            </StackPanel>
+            <StackPanel x:Name="CaptchaPanel" Orientation="Horizontal">
+                <TextBlock Text="Введите капчу:" Style="{StaticResource CommonBlock}"></TextBlock>
+                <Image x:Name="CaptchaImage"></Image>
+                <TextBox></TextBox>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Button Content="Выход"></Button>
+                <Button Content="Войти"></Button>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Window>
