--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -65,10 +65,65 @@
             <StackPanel x:Name="CaptchaPanel" Orientation="Horizontal" Visibility="Collapsed">
                 <StackPanel>
                     <TextBlock Text="Введите капчу:" Style="{StaticResource CommonBlock}" TextAlignment="Left"></TextBlock>
-                    <Image x:Name="CaptchaImage" Width="200" Height="20" Margin="5" Stretch="UniformToFill">
+                    <Image x:Name="CaptchaImage" Width="auto" Height="auto" Margin="5" Stretch="UniformToFill" RenderTransformOrigin="0.5,0.5">
+                        <Image.RenderTransform>
+                            <ScaleTransform/>
+                        </Image.RenderTransform>
+                        <Image.Triggers>
+                            <EventTrigger RoutedEvent="Mouse.MouseEnter">
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation Duration="0:0:1"
+                                                         From="1"
+                                                         To="1.5"
+                                                         Storyboard.TargetProperty="RenderTransform.ScaleX">
+                                            <DoubleAnimation.EasingFunction>
+                                                <CircleEase EasingMode="EaseOut"></CircleEase>
+                                            </DoubleAnimation.EasingFunction>
+                                        </DoubleAnimation>
+                                        <DoubleAnimation Duration="0:0:1"
+                                                         From="1"
+                                                         To="1.5"
+                                                         Storyboard.TargetProperty="RenderTransform.ScaleY">
+                                            <DoubleAnimation.EasingFunction>
+                                                <CircleEase EasingMode="EaseOut"></CircleEase>
+                                            </DoubleAnimation.EasingFunction>
+                                        </DoubleAnimation>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+                            <EventTrigger RoutedEvent="Mouse.MouseLeave">
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation Duration="0:0:1"
+                                                         To="1"
+                                                         From="1.5"
+                                                         Storyboard.TargetProperty="RenderTransform.ScaleX">
+                                            <DoubleAnimation.EasingFunction>
+                                                <CircleEase EasingMode="EaseOut"></CircleEase>
+                                            </DoubleAnimation.EasingFunction>
+                                        </DoubleAnimation>
+                                        <DoubleAnimation Duration="0:0:1"
+                                                         To="1"
+                                                         From="1.5"
+                                                         Storyboard.TargetProperty="RenderTransform.ScaleY">
+                                            <DoubleAnimation.EasingFunction>
+                                                <CircleEase EasingMode="EaseOut"></CircleEase>
+                                            </DoubleAnimation.EasingFunction>
+                                        </DoubleAnimation>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+                        </Image.Triggers>
                     </Image>
                     <Button Content="Ввести"
-                        Height="20"></Button>
+                        Height="20"
+                            Name="BtnCheckCaptcha"
+                            Click="BtnCheckCaptcha_Click"></Button>
+                    <Button Content="Пересобрать"
+                        Height="20"
+                            Name="BtnReloadCaptcha"
+                            Click="BtnReloadCaptcha_Click"></Button>
                 </StackPanel>
                 <TextBox x:Name="CaptchaBox" Height="20"></TextBox>
             </StackPanel>
