--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -105,5 +105,20 @@
                     Name="BtnCloseGiantCaptcha"
                     Click="BtnCloseGiantCaptcha_Click"></Button>
         </Grid>
+        <Rectangle Fill="MediumPurple" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center"
+                   VerticalAlignment="Bottom" Width="50" Height="50" Margin="40" Visibility="Hidden" Name="LoadingRect">
+            <Rectangle.RenderTransform>
+                <RotateTransform></RotateTransform>
+            </Rectangle.RenderTransform>
+            <Rectangle.Triggers>
+                <EventTrigger RoutedEvent="Loaded">
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation From="0" To="360" Duration="0:0:2" RepeatBehavior="Forever" Storyboard.TargetProperty="RenderTransform.Angle"></DoubleAnimation>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+            </Rectangle.Triggers>
+        </Rectangle>
     </Grid>
 </Window>
