--- a/Views/FunctionalWindow.xaml
+++ b/Views/FunctionalWindow.xaml
@@ -6,7 +6,9 @@
         xmlns:local="clr-namespace:LaboratoryApp.Views"
         mc:Ignorable="d"
         Height="450" Width="800" MinHeight="450" MinWidth="800" Topmost="True"
-        Title="{Binding CurrentTitle}">
+        Title="{Binding CurrentTitle}"
+        Name="FuncWin"
+        ContentRendered="FuncWin_ContentRendered">
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
