--- a/Views/AssistantPage.xaml
+++ b/Views/AssistantPage.xaml
@@ -8,9 +8,9 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="AssistantPage">
 
-    <Grid Background="Aqua">
+    <Grid>
         <GroupBox Header="Биоматериалы">
-            <ListView x:Name="ServiceOfOrderView">
+            <ListView x:Name="ServiceOfOrderView" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                 <ListView.ItemsPanel>
                     <ItemsPanelTemplate>
                         <WrapPanel Orientation="Horizontal"></WrapPanel>
@@ -18,21 +18,28 @@
                 </ListView.ItemsPanel>
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <Grid>
+                        <Grid Width="300" Height="300">
                             <Grid.RowDefinitions>
-                                <RowDefinition></RowDefinition>
-                                <RowDefinition></RowDefinition>
+                                <RowDefinition Height="*"></RowDefinition>
+                                <RowDefinition Height="*"></RowDefinition>
+                                <RowDefinition Height="*"></RowDefinition>
                             </Grid.RowDefinitions>
-                            <Grid Background="Blue" Opacity=".2" Grid.RowSpan="2"></Grid>
-                            <TextBlock Text="{Binding Order}" TextWrapping="Wrap"
-                                       Background="BlueViolet"
-                                       FontWeight="Bold" HorizontalAlignment="Center"></TextBlock>
-                            
+                            <Grid Background="Blue" Opacity=".1" Grid.RowSpan="3">
+                                <Grid.Effect>
+                                    <DropShadowEffect BlurRadius="5" Color="Blue">
+                                    </DropShadowEffect>
+                                </Grid.Effect>
+                            </Grid>
+                            <TextBlock Text="{Binding Service.Name}" TextWrapping="Wrap"
+                                       FontWeight="Bold" HorizontalAlignment="Center" FontSize="20"></TextBlock>
+                            <TextBlock Grid.Row="1" Text="{Binding Order.User.FullName, StringFormat={}Пациент: {0}}"
+                                       HorizontalAlignment="Center" FontSize="20"></TextBlock>
+                            <TextBlock Grid.Row="2" Text="{Binding Order.GetPriceSum, StringFormat={}{0} руб.}"
+                                       HorizontalAlignment="Center" FontSize="20"></TextBlock>
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
         </GroupBox>
-        <ListView></ListView>
     </Grid>
 </Page>
