--- a/App.xaml
+++ b/App.xaml
@@ -9,6 +9,9 @@
             <Setter Property="TextAlignment" Value="Right" />
             <Setter Property="Width" Value="150" />
         </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="Margin" Value="5" />
+        </Style>
         <Style TargetType="ComboBox">
             <Setter Property="Margin" Value="5" />
             <Setter Property="VerticalContentAlignment" Value="Center" />
